--- a/components/python-ztjoulqn/overlays/stage/deployment-patch.yaml
+++ b/components/python-ztjoulqn/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
+      - image: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/python-ztjoulqn:610a64e103aa2f757d3ec71caf2976c61e0e946d@sha256:4330f0c34cf9a62c4e9c05d9758c8c90cedef5fb5009a0a0318040e47fa90ad6
         name: container-image  
